storage/innobase/include/trx0trx.h
@@ -779,12 +779,13 @@ struct trx_lock_t {
 	bool		start_stmt;
 };
 
-/** Type used to store the list of tables that are modified by a given
-transaction. We store pointers to the table objects in memory because
+/** Collection of persistent tables and their first modification
+in a transaction.
+We store pointers to the table objects in memory because
 we know that a table object will not be destroyed while a transaction
 that modified it is running. */
-typedef std::set<
-	dict_table_t*,
+typedef std::map<
+	dict_table_t*, undo_no_t,
 	std::less<dict_table_t*>,
 	ut_allocator<dict_table_t*> >	trx_mod_tables_t;
 
